@@ -748,3 +748,6 @@
 2014-12-19 Fred Gleason <fredg@paravelsystems.com>
 	* Converted 'Missing Affidavit Contacts' report to use the
 	spreadsheet rendering library.
+2014-12-22 Fred Gleason <fredg@paravelsystems.com>
+	* Modified 'davit/preview.cpp' to place the exception section
+	of affidavits on a separate page.
